# findocqa-env

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: env.py  main.py  models.py
server/data/: documents.py
server/graders/: grader.py
server/tasks/: answer_questions.py  extract_facts.py  identify_conflicts.py
